# LeanUniverse

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  how-to-question.md
.github/workflows/: ci.yml  pre-commit.yml
lean_universe/: __init__.py  __version__.py  cli.py  config.py
lean_universe/dataset/: args.py  data.py  run.py
lean_universe/models/: repository.py
lean_universe/repository/: manager.py
lean_universe/utils/: exceptions.py  logger.py  logging.py  params.py  tools.py
tests/: __init__.py  conftest.py  test_basic.py  test_repository_manager.py  test_simple.py
